--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "verilog-filelist-parser"
-version = "0.1.2"
-authors = ["Raamakrishnan <raamakrishnan1997@gmail.com>"]
-edition = "2018"
+name = "sv-filelist-parser"
+version = "0.1.3"
+edition = "2021"
 license = "MIT"
-description = "A library to parse a Verilog Filelist and return a list of files, include directories and defines"
-repository = "https://github.com/Raamakrishnan/verilog-filelist-parser"
+description = "A library to parse a SystemVerilog Filelist and return a list of files, include directories and defines"
+repository = "https://github.com/supleed2/sv-filelist-parser"
 readme = "README.md"
 categories = ["parser-implementations", "parsing", "development-tools"]
 keywords = ["verilog", "systemverilog", "filelist"]
